# marduk

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  PLAN.md  README.md
crates/marduk-engine/: Cargo.toml
crates/marduk-engine/src/: lib.rs
crates/marduk-engine/src/coords/: color.rs  corner_radii.rs  mod.rs  rect.rs  vec2.rs  viewport.rs
crates/marduk-lsp/: Cargo.toml
crates/marduk-lsp/src/: analysis.rs  backend.rs  knowledge.rs  main.rs
crates/marduk-mkml/: Cargo.toml
crates/marduk-mkml/src/: ast.rs  error.rs  lexer.rs  lib.rs  parser.rs
crates/marduk-studio/: Cargo.toml
crates/marduk-studio/src/: file_explorer.rs  main.rs
crates/marduk-studio/ui/: controls.mkml  header.mkml  main.mkml  settings.mkml  titlebar.mkml  toolbar.mkml
crates/marduk-ui/: Cargo.toml
crates/marduk-ui/src/: app.rs  constraints.rs  cursor.rs  event.rs  focus.rs  image_loader.rs  lib.rs  painter.rs  scene.rs  widget.rs
crates/marduk-ui/src/dsl/: ast.rs  builder.rs  error.rs  lexer.rs  mod.rs  parser.rs
crates/marduk-ui/src/widgets/: button.rs  checkbox.rs  combobox.rs  container.rs  flex.rs  image.rs  mod.rs  modal.rs  number_input.rs  progress.rs  radio.rs  scroll.rs  slider.rs  splitter.rs  stack.rs  tabs.rs  text.rs  text_edit.rs  textbox.rs  toggle.rs  tooltip.rs  tree.rs  zoom_view.rs
editors/rustrover/: build.gradle.kts  settings.gradle.kts
editors/vscode/: .vscodeignore  language-configuration.json  package-lock.json  package.json  tsconfig.json
editors/vscode/src/: extension.ts
editors/vscode/syntaxes/: mkml.tmLanguage.json
(+70 files in other folders)
