[package]
name = "marduk-lsp"
version = "0.1.0"
edition = "2024"
description = "Language server for the Marduk Markup Language (.mkml)"

[[bin]]
name = "marduk-lsp"
path = "src/main.rs"

[dependencies]
marduk-mkml = { path = "../marduk-mkml" }
tower-lsp   = "0.20"
tokio       = { version = "1", features = ["macros", "rt-multi-thread", "io-std"] }
serde_json  = "1"
