[package]
name = "marduk-mkml"
version = "0.1.0"
edition = "2024"
description = "Lexer, parser, and AST for the Marduk Markup Language (.mkml)"

# No dependencies — this crate is intentionally standalone so it can be used
# by language-server tooling without pulling in wgpu / winit / engine code.
[dependencies]
